2011-04-28  Mark Pilgrim  <pilgrim@chromium.org>

Reviewed by Tony Chang.

        IndexedDB put() should fail if second (key) parameter is null
        https://bugs.webkit.org/show_bug.cgi?id=58613

        Added one test and fixed another that relied on old (broken) behavior
        when passing null in second parameter.

        * storage/indexeddb/mozilla/key-requirements-put-null-key-expected.txt: Added.
        * storage/indexeddb/mozilla/key-requirements-put-null-key.html: Added.
        * storage/indexeddb/objectstore-basics-expected.txt:
        * storage/indexeddb/objectstore-basics.html:
2011-04-28  Mark Pilgrim  <pilgrim@chromium.org>

        Reviewed by Tony Chang.

        IndexedDB put() should fail if second (key) parameter is null
        https://bugs.webkit.org/show_bug.cgi?id=58613

        If key arg is not specified, prpKey ends up as a null pointer in ::put().
        However, if the key arg is specified but is null, prpKey ends up as a
        valid IDBKey which has a null key type. As it happens, we need to be able
        to detect the difference between these cases (the key arg is optional but
        if specified must not be null).

        Test: storage/indexeddb/mozilla/key-requirements-put-null-key.html

        * storage/IDBObjectStoreBackendImpl.cpp:
        (WebCore::IDBObjectStoreBackendImpl::put):

Canonical link: https://commits.webkit.org/74945@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@85234 268f45cc-cd09-0410-ab3c-d52691b4dbfc